Changes events page header text size to match blog Event page headers displayed badly on mobile: this is a fix

--- a/themes/hugo-ror/assets/sass/partials/_hugo-ror.scss
+++ b/themes/hugo-ror/assets/sass/partials/_hugo-ror.scss
@@ -6889,7 +6889,7 @@ img.ror-id {
 	margin: 0;		
 }
 
-.blog h1 {
+.blog h1, .events h1 {
   font-size: 2rem;
   line-height: 2rem;
 }
